--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.2",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "framer-motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
